[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/characters/Goblin.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/spritesheets/Dragon/dragon_spriteframes.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/spritesheets/Dragon/dragon_sm.tres" type="AnimationNodeStateMachine" id=3]
[ext_resource path="res://scripts/Dragon.gd" type="Script" id=4]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AttackHitbox/CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=1]
length = 0.708333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.666667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 16 ]
}

[sub_resource type="Animation" id=2]
length = 1.66667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "firebreathe" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.45833, 1.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 12, 20, 24 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25, 1.29167, 1.33333, 1.375, 1.41667, 1.45833, 1.66667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "begin_attack"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "spit_fireball"
}, {
"args": [  ],
"method": "end_attack"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackHitbox/FireballSource:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 2.32967, 1.20385, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.708333
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.666667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 16 ]
}

[sub_resource type="Animation" id=4]
length = 0.625
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "stomp" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.583333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 14 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackHitbox/CollisionShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.416667, 0.458333, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.625 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "begin_attack"
}, {
"args": [  ],
"method": "end_attack"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackHitbox/CollisionShape:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.416667 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.882358, 0.556722, 0.5 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.666667
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.625 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[node name="Dragon" instance=ExtResource( 1 )]
script = ExtResource( 4 )
possible_drops = [  ]
drop_chance = 0.2
item_scene = null

[node name="Sprite" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.443973, 0 )
frames = ExtResource( 2 )
animation = "firebreathe"
frame = 12

[node name="CollisionShape" parent="AttackHitbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.37554, -0.356804, 0 )

[node name="FireballSource" type="Position3D" parent="AttackHitbox" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32967, 1.20385, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/RESET = SubResource( 7 )
anims/death = SubResource( 1 )
anims/firebreathe = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/stomp = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="." index="7"]
tree_root = ExtResource( 3 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 6 )
parameters/conditions/not_running = false
parameters/conditions/running = false

[node name="AttackTimer" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
